--- a/facade/MainPage.xaml
+++ b/facade/MainPage.xaml
@@ -5,6 +5,7 @@
              Title="#facade"
              xmlns:local="clr-namespace:facade"
              x:DataType="local:MainPageViewModel"
+              BackgroundColor="LightCoral"
              >
 
     <ScrollView>
@@ -16,7 +17,7 @@
 
             </Grid.RowDefinitions>
 
-            <Frame BorderColor="Black" BackgroundColor="#facade" Margin="15,25,15,25" Padding="15">
+            <Frame BorderColor="#666" BackgroundColor="#facade" Margin="15,25,15,25" Padding="15">
             <!--<RoundRectangle Grid.Row="0" Fill="#facade" CornerRadius="48" MaximumHeightRequest="150"/>-->
                 <StackLayout  Grid.Row="0" Orientation="Horizontal"  >
 
@@ -49,6 +50,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
+
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
@@ -62,13 +64,18 @@
                     Text="#beaded"
                     BackgroundColor="#beaded"
                     FontSize="16"
-                    IsEnabled="false "/>
+                    IsEnabled="false"
+                    BorderColor="#666"
+                    BorderWidth="2"/>
                 <Button Grid.Row="0"
                     Grid.Column="1"
                     Text="#fadedd"
                     BackgroundColor="#fadedd"
                     FontSize="16"
-                    IsEnabled="false "/>
+                    IsEnabled="false "
+                        
+                    BorderColor="#666"
+                    BorderWidth="2"/>
                 <Button Grid.Row="0"
                     Grid.Column="2"
                     Text="#beefed"
@@ -80,40 +87,43 @@
                     Grid.Column="0"
                     Text=""
                     BackgroundColor="Transparent"
-                    BorderColor="#111"
-                    BorderWidth="1"
+                    
+                    BorderColor="#666"
+                    BorderWidth="2"
                     FontSize="16"
                     IsEnabled="false "/>
                 <Button Grid.Row="1"
                     Grid.Column="1"
                     Text=""
                     BackgroundColor="Transparent"
-                    BorderColor="#111"
-                    BorderWidth="1"
+                    
+                    BorderColor="#666"
+                    BorderWidth="2"
                     FontSize="16"
                     IsEnabled="false "/>
                 <Button Grid.Row="1"
                     Grid.Column="2"
                     Text=""
                     BackgroundColor="Transparent"
-                    BorderColor="#111"
-                    BorderWidth="1"
+                    
+                    BorderColor="#666"
+                    BorderWidth="2"
                     FontSize="16"
                     IsEnabled="false "/>
 
             </Grid>
 
-            <Grid Padding="12,12,12,36" Grid.Row="2" RowSpacing="12" ColumnSpacing="12" >
+            <Grid Padding="12,12,12,36" Grid.Row="3" RowSpacing="16">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
+                    <RowDefinition Height="100" />
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="auto" />
 
                 </Grid.ColumnDefinitions>
 
@@ -194,10 +204,11 @@
                     Command="{Binding AddLetterCommand}"
                     CommandParameter="F"
                 />
-                <Button Grid.Row="0"
-                    Grid.Column="3"
-                    Text="↑"
-                    WidthRequest="80"
+                <Button Grid.Row="2"
+                        Grid.ColumnSpan="2"
+                    Grid.Column="0"
+                    Text="Enter"
+                    WidthRequest="220"
                     HeightRequest="80"
                     BackgroundColor="#666"
                     TextColor="White"
@@ -211,11 +222,11 @@
                                 Opacity="0.5" />
                     </Button.Shadow>
                 </Button>
-                <Button Grid.Row="1"
-                    Grid.Column="3"
+                <Button Grid.Row="2"
+                    Grid.Column="2"
                     Text="⌫"
-                    WidthRequest="80"
-                    HeightRequest="80"
+                    MaximumWidthRequest="90"
+                    MaximumHeightRequest="80"
                     BackgroundColor="#666"
                     TextColor="White"
                     FontSize="48"
