--- a/facade/MainPage.xaml
+++ b/facade/MainPage.xaml
@@ -18,7 +18,7 @@
             </Grid.RowDefinitions>
 
             <Frame BorderColor="#666" BackgroundColor="#facade" Margin="15,25,15,25" Padding="15">
-            <!--<RoundRectangle Grid.Row="0" Fill="#facade" CornerRadius="48" MaximumHeightRequest="150"/>-->
+                <!--<RoundRectangle Grid.Row="0" Fill="#facade" CornerRadius="48" MaximumHeightRequest="150"/>-->
                 <StackLayout  Grid.Row="0" Orientation="Horizontal"  >
 
                     <Label Text="#" FontSize="60" VerticalOptions="Center" />
@@ -30,17 +30,20 @@
 
                 </StackLayout>
             </Frame>
-            
+
+
             <CollectionView
-                ItemsSource="{Binding Guesses}">
+                ItemsSource="{Binding Guesses}"
+                Grid.Row="1"
+                >
                 <CollectionView.ItemsLayout>
                     <GridItemsLayout
                         Orientation="Vertical"
                         Span="3"/>
-                    
-                    
+
+
                 </CollectionView.ItemsLayout>
-                
+
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="local:ColorGuess">
 
@@ -48,78 +51,13 @@
                         Text="{Binding Guess}"
                         BackgroundColor="{Binding Color}"
                         FontSize="16"
-                        IsEnabled="false "/>
+                        IsEnabled="false "
+                        BorderColor="#666"
+                        BorderWidth="2"/>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
 
             </CollectionView>
-
-            <Grid Padding="12" Grid.Row="1" RowSpacing="12" ColumnSpacing="12">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-
-                </Grid.RowDefinitions>
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-
-                <Button Grid.Row="0"
-                    Grid.Column="0"
-                    Text="#beaded"
-                    BackgroundColor="#beaded"
-                    FontSize="16"
-                    IsEnabled="false"
-                    BorderColor="#666"
-                    BorderWidth="2"/>
-                <Button Grid.Row="0"
-                    Grid.Column="1"
-                    Text="#fadedd"
-                    BackgroundColor="#fadedd"
-                    FontSize="16"
-                    IsEnabled="false "
-                        
-                    BorderColor="#666"
-                    BorderWidth="2"/>
-                <Button Grid.Row="0"
-                    Grid.Column="2"
-                    Text="#beefed"
-                    BackgroundColor="#beefed"
-                    FontSize="16"
-                    IsEnabled="false "/>
-
-                <Button Grid.Row="1"
-                    Grid.Column="0"
-                    Text=""
-                    BackgroundColor="Transparent"
-                    
-                    BorderColor="#666"
-                    BorderWidth="2"
-                    FontSize="16"
-                    IsEnabled="false "/>
-                <Button Grid.Row="1"
-                    Grid.Column="1"
-                    Text=""
-                    BackgroundColor="Transparent"
-                    
-                    BorderColor="#666"
-                    BorderWidth="2"
-                    FontSize="16"
-                    IsEnabled="false "/>
-                <Button Grid.Row="1"
-                    Grid.Column="2"
-                    Text=""
-                    BackgroundColor="Transparent"
-                    
-                    BorderColor="#666"
-                    BorderWidth="2"
-                    FontSize="16"
-                    IsEnabled="false "/>
-
-            </Grid>
 
             <Grid Padding="12,12,12,36" Grid.Row="3" RowSpacing="16">
                 <Grid.RowDefinitions>
@@ -199,6 +137,7 @@
                     Command="{Binding AddLetterCommand}"
                     CommandParameter="E"
                 />
+                
                 <Button Grid.Row="1"
                     Grid.Column="2"
                     Text="F"
@@ -209,7 +148,7 @@
 
                     FontSize="48"
 
-                    Command="{Binding GuessCommand}"
+                    Command="{Binding AddLetterCommand}"
                     CommandParameter="F"
                 />
                 <Button Grid.Row="2"
@@ -220,7 +159,7 @@
                     HeightRequest="80"
                     BackgroundColor="#666"
                     TextColor="White"
-                    Clicked="Button_Clicked"
+                    Command="{Binding GuessCommand}"
                     FontSize="48"
                 >
                     <Button.Shadow>
@@ -238,6 +177,7 @@
                     BackgroundColor="#666"
                     TextColor="White"
                     FontSize="48"
+                    Command="{Binding deleteButton_ClickedCommand}"
                 />
 
                 <!--Grid.Column="2"
