--- a/facade/GameOverPage.xaml
+++ b/facade/GameOverPage.xaml
@@ -22,7 +22,7 @@
             
             />
 
-        <Grid Margin="20" >
+        <Grid Margin="20" ColumnSpacing="12">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -31,54 +31,25 @@
             <Button
                 Text="Secret Color:"
                 Grid.Column="0"
-                BorderColor="Transparent"
-                BorderWidth="0"
-                BackgroundColor="Transparent"
-                FontSize="25"
+                BorderColor="Black"
+                BorderWidth="2"
+                BackgroundColor="White"
+                FontSize="20"
+                FontAttributes="Bold"
                 TextColor="Black"
                 HorizontalOptions="End"
                 IsEnabled="False"
             />
 
             <Button
-                Text="FACADE"
-                Grid.Column="1"
-                BorderColor="Transparent"
-                BorderWidth="0"
-                BackgroundColor="Transparent"
+                x:Name="revealColor"
+                Text="{Binding GuessCommand}"
+                Grid.Column="2"
+                BorderColor="Black"
+                BorderWidth="2"
+                BackgroundColor="White"
                 FontSize="25"
-                TextColor="Black"
-                HorizontalOptions="Center"
-                IsEnabled="False"
-            />
-        </Grid>
-
-        <Grid Margin="5" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-
-            <Button
-                Text="Attempts:"
-                Grid.Column="0"
-                BorderColor="Transparent"
-                BorderWidth="0"
-                BackgroundColor="Transparent"
-                FontSize="25"
-                TextColor="Black"
-                HorizontalOptions="End"
-                IsEnabled="False"
-            />
-
-            <Button
-                x:DataType="local:MainPageViewModel"
-                Text="{Binding Guesses.Count}"
-                Grid.Column="1"
-                BorderColor="Transparent"
-                BorderWidth="0"
-                BackgroundColor="Transparent"
-                FontSize="25"
+                FontAttributes="Bold"
                 TextColor="Black"
                 HorizontalOptions="Center"
                 IsEnabled="False"
