--- a/facade/MainPage.xaml
+++ b/facade/MainPage.xaml
@@ -17,7 +17,7 @@
 
             </Grid.RowDefinitions>
 
-            <Frame BorderColor="#666" BackgroundColor="#facade" Margin="15,25,15,25" Padding="15">
+            <Frame BorderColor="#666" BackgroundColor="#FACADE" Margin="15,25,15,25" Padding="15">
                 <!--<RoundRectangle Grid.Row="0" Fill="#facade" CornerRadius="48" MaximumHeightRequest="150"/>-->
                 <StackLayout  Grid.Row="0" Orientation="Horizontal"  >
 
